Assembled employee-service and its dbs with kubernetes

--- a/kubernetes/istio-ingress.yaml
+++ b/kubernetes/istio-ingress.yaml
@@ -29,6 +29,13 @@ spec:
                 name: inventory-service
                 port:
                   number: 8080
+          - path: /employee-api
+            pathType: Prefix
+            backend:
+              service:
+                name: employee-service
+                port:
+                  number: 8080
           - path: /
             pathType: Prefix
             backend:
