--- a/kubernetes/inventory-service/mongo/is-mongo-stateful.yaml
+++ b/kubernetes/inventory-service/mongo/is-mongo-stateful.yaml
@@ -23,12 +23,12 @@ spec:
             - name: MONGO_INITDB_ROOT_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: ts-mongo-secret
+                  name: is-mongo-secret
                   key: MONGO_INITDB_ROOT_USERNAME
             - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: ts-mongo-secret
+                  name: is-mongo-secret
                   key: MONGO_INITDB_ROOT_PASSWORD
       volumes:
         - name: inventory-service-eventstore-disk
