--- a/kubernetes/inventory-service/postgres/is-postgres-stateful.yaml
+++ b/kubernetes/inventory-service/postgres/is-postgres-stateful.yaml
@@ -23,12 +23,12 @@ spec:
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: os-postgres-secret
+                  name: is-postgres-secret
                   key: POSTGRES_USER
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: os-postgres-secret
+                  name: is-postgres-secret
                   key: POSTGRES_PASSWORD
       volumes:
         - name: inventory-service-db-disk
