--- a/kubernetes/order-service/order-service-deployment.yaml
+++ b/kubernetes/order-service/order-service-deployment.yaml
@@ -19,21 +19,21 @@ spec:
           ports:
             - containerPort: 8080
           env:
-            - name: SPRING_JDBC_URL
+            - name: APP_JDBC_URL
               valueFrom:
                 configMapKeyRef:
                   name: order-service-configmap
-                  key: SPRING_JDBC_URL
-            - name: SPRING_R2DBC_URL
+                  key: APP_JDBC_URL
+            - name: APP_R2DBC_URL
               valueFrom:
                 configMapKeyRef:
                   name: order-service-configmap
-                  key: SPRING_R2DBC_URL
-            - name: SPRING_KAFKA_BOOTSTRAP-SERVERS
+                  key: APP_R2DBC_URL
+            - name: APP_KAFKA_BOOTSTRAP-SERVERS
               valueFrom:
                 configMapKeyRef:
                   name: order-service-configmap
-                  key: SPRING_KAFKA_BOOTSTRAP-SERVERS
+                  key: APP_KAFKA_BOOTSTRAP-SERVERS
             - name: SETTINGS_TASK-SERVICE_HOST
               valueFrom:
                 configMapKeyRef:
@@ -44,12 +44,12 @@ spec:
                 configMapKeyRef:
                   name: order-service-configmap
                   key: SETTINGS_TASK-SERVICE_PORT
-            - name: SPRING_DATASOURCE_USERNAME
+            - name: APP_DATASOURCE_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: os-postgres-secret
                   key: POSTGRES_USER
-            - name: SPRING_DATASOURCE_PASSWORD
+            - name: APP_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: os-postgres-secret
