--- a/kubernetes/task-service/task-service-deployment.yaml
+++ b/kubernetes/task-service/task-service-deployment.yaml
@@ -19,53 +19,53 @@ spec:
           ports:
             - containerPort: 8080
           env:
-            - name: SPRING_LIQUIBASE_URL
+            - name: APP_LIQUIBASE_URL
               valueFrom:
                 configMapKeyRef:
                   name: task-service-configmap
-                  key: SPRING_LIQUIBASE_URL
-            - name: SPRING_DATA_MONGODB_AUTHENTICATION-DATABASE
+                  key: APP_LIQUIBASE_URL
+            - name: APP_DATA_MONGODB_AUTHENTICATION-DATABASE
               valueFrom:
                 configMapKeyRef:
                   name: task-service-configmap
-                  key: SPRING_DATA_MONGODB_AUTHENTICATION-DATABASE
-            - name: SPRING_DATA_MONGODB_PORT
+                  key: APP_DATA_MONGODB_AUTHENTICATION-DATABASE
+            - name: APP_DATA_MONGODB_PORT
               valueFrom:
                 configMapKeyRef:
                   name: task-service-configmap
-                  key: SPRING_DATA_MONGODB_PORT
-            - name: SPRING_DATA_MONGODB_DATABASE
+                  key: APP_DATA_MONGODB_PORT
+            - name: APP_DATA_MONGODB_DATABASE
               valueFrom:
                 configMapKeyRef:
                   name: task-service-configmap
-                  key: SPRING_DATA_MONGODB_DATABASE
-            - name: SPRING_DATA_MONGODB_HOST
+                  key: APP_DATA_MONGODB_DATABASE
+            - name: APP_DATA_MONGODB_HOST
               valueFrom:
                 configMapKeyRef:
                   name: task-service-configmap
-                  key: SPRING_DATA_MONGODB_HOST
-            - name: SPRING_KAFKA_BOOTSTRAP-SERVERS
+                  key: APP_DATA_MONGODB_HOST
+            - name: APP_KAFKA_BOOTSTRAP-SERVERS
               valueFrom:
                 configMapKeyRef:
                   name: task-service-configmap
-                  key: SPRING_KAFKA_BOOTSTRAP-SERVERS
-            - name: SPRING_DATA_MONGODB_USERNAME
+                  key: APP_KAFKA_BOOTSTRAP-SERVERS
+            - name: APP_DATA_MONGODB_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: ts-mongo-secret
                   key: MONGO_INITDB_ROOT_USERNAME
-            - name: SPRING_DATA_MONGODB_PASSWORD
+            - name: APP_DATA_MONGODB_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: ts-mongo-secret
                   key: MONGO_INITDB_ROOT_PASSWORD
-            - name: SPRING_DATA_REDIS_PORT
+            - name: APP_DATA_REDIS_PORT
               valueFrom:
                 configMapKeyRef:
                   name: task-service-configmap
-                  key: SPRING_DATA_REDIS_PORT
-            - name: SPRING_DATA_REDIS_HOST
+                  key: APP_DATA_REDIS_PORT
+            - name: APP_DATA_REDIS_HOST
               valueFrom:
                 configMapKeyRef:
                   name: task-service-configmap
-                  key: SPRING_DATA_REDIS_HOST
+                  key: APP_DATA_REDIS_HOST
