--- a/kubernetes/order-service/order-service-deployment.yaml
+++ b/kubernetes/order-service/order-service-deployment.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         app: order-service
     spec:
+      serviceAccountName: order-service-service-account
       containers:
         - name: order-service
           image: gzn2zjsn/order-service
