--- a/kubernetes/inventory-service/inventory-service-configmap.yaml
+++ b/kubernetes/inventory-service/inventory-service-configmap.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: default
   name: inventory-service-configmap
 data:
   APP_R2DBC_URL: 'r2dbc:postgresql://is-postgres-service:5432/postgres'
