--- a/kubernetes/task-service/task-service-auth-policy.yaml
+++ b/kubernetes/task-service/task-service-auth-policy.yaml
@@ -1,6 +1,7 @@
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
+  namespace: default
   name: allow-os-to-ts
 spec:
   selector:
