--- a/kubernetes/employee-service/employee-service-configmap.yaml
+++ b/kubernetes/employee-service/employee-service-configmap.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: default
   name: employee-service-configmap
 data:
   APP_R2DBC_URL: 'r2dbc:postgresql://es-postgres-service:5432/postgres'
