--- a/kubernetes/employee-service/mongo/es-mongo-stateful.yaml
+++ b/kubernetes/employee-service/mongo/es-mongo-stateful.yaml
@@ -1,10 +1,11 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
+  namespace: default
   name: es-mongo-stateful
 spec:
   serviceName: es-mongo
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: es-mongo
