--- a/kubernetes/kafka/zookeeper/zookeeper-configmap.yaml
+++ b/kubernetes/kafka/zookeeper/zookeeper-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: zookeeper-configmap
+  namespace: default
 data:
   ZOOKEEPER_CLIENT_PORT: '2181'
   ZOOKEEPER_TICK_TIME: '2000'
