--- a/kubernetes/kafka/zookeeper/zookeeper-stateful.yaml
+++ b/kubernetes/kafka/zookeeper/zookeeper-stateful.yaml
@@ -1,10 +1,11 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
+  namespace: default
   name: zookeeper-stateful
 spec:
   serviceName: zookeeper
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: zookeeper
