--- a/kubernetes/order-service/order-service-deployment.yaml
+++ b/kubernetes/order-service/order-service-deployment.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: default
   name: order-service
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: order-service
