--- a/kubernetes/task-service/redis/ts-redis-stateful.yaml
+++ b/kubernetes/task-service/redis/ts-redis-stateful.yaml
@@ -1,10 +1,11 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
+  namespace: default
   name: ts-redis-stateful
 spec:
   serviceName: ts-redis
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: ts-redis
