--- a/kubernetes/app/order-service/order-service-configmap.yaml
+++ b/kubernetes/app/order-service/order-service-configmap.yaml
@@ -6,6 +6,6 @@ metadata:
 data:
   APP_R2DBC_URL: 'r2dbc:postgresql://os-postgres-service:5432/postgres'
   APP_JDBC_URL: 'jdbc:postgresql://os-postgres-service:5432/postgres'
-  APP_KAFKA_BOOTSTRAP-SERVERS: 'kafka-service:9092'
+  APP_KAFKA_BOOTSTRAP-SERVERS: 'kafka-cluster-kafka-bootstrap.kafka:9092'
   SETTINGS_TASK-SERVICE_HOST: 'task-service'
   SETTINGS_TASK-SERVICE_PORT: '8080'
